All Urgent Tickets completed

--- a/src/app/components/product-list/product-list.component.css
+++ b/src/app/components/product-list/product-list.component.css
@@ -8,3 +8,7 @@
 .table-fixed thead,tbody,tr,td,th {
     display: block;
 }
+fa-exclamation-triangle {
+    color: red;
+    text-decoration-color: red;
+}
