--- a/src/app/components/shopping-list-component/shopping-list-component.component.html
+++ b/src/app/components/shopping-list-component/shopping-list-component.component.html
@@ -1,23 +1,42 @@
-<div class="row" >
-    <app-product-list class="col-lg-5" [products]="currentItems" [header]="'current'"></app-product-list>
+<div class="row">
+    <app-product-list class="col-lg-5" [selectedItem]="selectedCurrentItemId"
+        (changeSelectedItem)="currentItemSelected($event)" [products]="currentItems" [header]="'Current'">
+    </app-product-list>
+
     <div class="col-lg-2 d-flex flex-column justify-content-around">
         <div class="nav-buttons">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="moveSIFromCurrentToPrevious()">
                 <i class="fa fa-angle-double-right"></i>
             </button>
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="moveSIFromPreviousToCurrent()">
                 <i class="fa fa-angle-double-left"></i>
             </button>
         </div>
 
         <div class="nav-buttons">
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="moveSelectedItemUp()">
                 <i class="fa fa-angle-double-up"></i>
             </button>
-            <button class="btn btn-primary">
+            <button class="btn btn-primary" (click)="moveSelectedItemDown()">
                 <i class="fa fa-angle-double-down"></i>
             </button>
         </div>
     </div>
-    <app-product-list class="col-lg-5" [products]="currentItems" [header]="'previous'"></app-product-list>
-</div>`
+
+    <app-product-list class="col-lg-5" [selectedItem]="selectedPreviousItemId"
+        (changeSelectedItem)="previousItemSelected($event)" [products]="previousItems" [header]="'previous'">
+    </app-product-list>
+</div>
+<div class="d-flex justify-content-start nav-modify-buttons">
+    <button class="btn btn-primary" (click)="openModalFormForAdd()">
+        <i class="fa fa-plus"> Add </i>
+    </button>
+
+    <button class="btn btn-secondary" *ngIf="selectedCurrentItemId || selectedPreviousItemId" (click)="openModalFormForEdit()">
+        <i class="fa fa-edit"> Edit </i>
+    </button>
+
+    <button class="btn btn-danger" *ngIf="selectedPreviousItemId && !selectedCurrentItemId" (click)="openModalFormforDelete()">
+        <i class="fa fa-trash"> Delete</i>
+    </button>
+</div>
