--- a/src/app/components/shopping-list-component/shopping-list-component.component.css
+++ b/src/app/components/shopping-list-component/shopping-list-component.component.css
@@ -1,5 +1,3 @@
-
-
 .nav-buttons button {
     width: 100%;
     margin-top: 10px;
@@ -8,4 +6,8 @@
 .nav-buttons button i {
     font-size: x-large;
 
+}
+
+.nav-modify-buttons button {
+    margin-left: 10px;
 }
