--- a/src/app/components/add-item-form/add-item-form.component.html
+++ b/src/app/components/add-item-form/add-item-form.component.html
@@ -38,11 +38,14 @@
 <div *ngIf="isDelete">
 <div  class="modal-body">
     <div class="alert alert-danger" role="alert">
-        Are you sure you want to delete this item?
+        Are you sure you want to delete <span class="font-weight-bold highlight"> {{ deleteItemName }} </span>
     </div>
 </div>
 <div  class="modal-footer">
-    <button class="btn btn-danger" (click)="deleteItem()">
+    <button class="btn btn-primary" (click)="deleteItem(false)">
+        Go back
+    </button>
+    <button class="btn btn-danger" (click)="deleteItem(true)">
         Delete
     </button>
 </div>
